--- a/src/app.css
+++ b/src/app.css
@@ -72,7 +72,7 @@
 
 @font-face {
     font-family: 'Geist-Mono';
-    src: url('/font/GeistMono-Regular.woff2') format('woff2');
+    src: url('/fonts/GeistMono-Regular.woff2') format('woff2');
     font-weight: 400;
     font-display: swap;
 }
